--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "dist/index.js",
   "author": "Typed Dev",
   "license": "MIT",
-  "repository": "https://github.com/typed-development/medusa-notification-resend",
-  "homepage": "https://github.com/typed-development/medusa-notification-resend",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rpuls/medusa-notification-resend.git#patch"
+  },
   "keywords": ["Resend", "Medusa", "MedusaJS", "Typed Development", "Email Provider", "Medusa Plugin", "Plugin", "NodeJS"],
   "files": [
     "dist"
